<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Baedaseul">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/introduction"
            android:text="@string/introduction"
            android:textSize="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/photo"
            android:text="@string/photo"
            android:textSize="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/schedule"
            android:text="@string/schedule"
            android:textSize="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/multiplication"
            android:text="@string/multiplication"
            android:textSize="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/setting"
            android:text="@string/setting"
            android:textSize="20dp"
            />
    </LinearLayout>
</LinearLayout>